@@ -9,12 +9,13 @@ import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class TabCompletion implements TabCompleter {
 
-    private ForceItemBattle forceItemBattle;
+    private final ForceItemBattle forceItemBattle;
 
     public TabCompletion(ForceItemBattle forceItemBattle) {
         this.forceItemBattle = forceItemBattle;
@@ -22,17 +23,16 @@ public class TabCompletion implements TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender commandSender, Command command, String s, String[] strings) {
-        if(command.getName().equalsIgnoreCase("start") && strings.length == 1) {
-            if(commandSender instanceof Player player) {
+        if (command.getName().equalsIgnoreCase("start") && strings.length == 1) {
+            if (commandSender instanceof Player) {
                 return new ArrayList<>(this.forceItemBattle.getSettings().gamePresetMap().keySet());
             }
 
-        } else if(command.getName().equalsIgnoreCase("top") && strings.length == 1) {
-            if(commandSender instanceof Player player) {
-                return Arrays.stream(PlayerStat.values()).filter(PlayerStat::isInLeaderboard).map(stat -> stat.name().toLowerCase()).collect(Collectors.toList());
-            }
+        } else if (command.getName().equalsIgnoreCase("top") && strings.length == 1 && (commandSender instanceof Player)) {
+            return Arrays.stream(PlayerStat.values()).filter(PlayerStat::isInLeaderboard).map(stat -> stat.name().toLowerCase()).toList();
+
         }
 
-        return null;
+        return Collections.emptyList();
     }
 }
