@@ -21,28 +21,25 @@ import java.util.stream.Collectors;
 
 public class StatsManager {
 
-    /**
-     *
-     * There is a lot of improvement possible, I know.
-     * I just wanted to do these stats as fast as I could. I mean it works lol
-     * (hopefully)
-     *
-     */
-
-    private final ForceItemBattle forceItemBattle;
     private final Gson gson;
-    private File userFile;
+    private final File userFile;
 
-    private ConcurrentSkipListMap<String, ForceItemPlayerStats> playerStats;
+    private final ConcurrentSkipListMap<String, ForceItemPlayerStats> playerStats;
 
     public StatsManager(ForceItemBattle forceItemBattle) {
-        this.forceItemBattle = forceItemBattle;
+        /**
+         *
+         * There is a lot of improvement possible, I know.
+         * I just wanted to do these stats as fast as I could. I mean it works lol
+         * (hopefully)
+         *
+         */
         this.gson = new GsonBuilder().setPrettyPrinting().create();
         this.playerStats = new ConcurrentSkipListMap<>(String.CASE_INSENSITIVE_ORDER);
-        this.userFile = new File(this.forceItemBattle.getDataFolder(), "users.json");
+        this.userFile = new File(forceItemBattle.getDataFolder(), "users.json");
 
         try {
-            if(!this.userFile.exists()) this.userFile.createNewFile();
+            if (!this.userFile.exists()) this.userFile.createNewFile();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -51,11 +48,12 @@ public class StatsManager {
     }
 
     public void addToStats(PlayerStat playerStat, ForceItemPlayerStats forceItemPlayerStats, int toBeAdded) {
-        switch(playerStat) {
-            case TOTAL_ITEMS -> forceItemPlayerStats.setTotalItemsFound(forceItemPlayerStats.totalItemsFound() + toBeAdded);
-            case TRAVELLED -> forceItemPlayerStats.setTravelled(forceItemPlayerStats.travelled() + toBeAdded);
-            case GAMES_WON -> forceItemPlayerStats.setGamesWon(forceItemPlayerStats.gamesWon() + toBeAdded);
-            case GAMES_PLAYED -> forceItemPlayerStats.setGamesPlayed(forceItemPlayerStats.gamesPlayed() + toBeAdded);
+        switch (playerStat) {
+            case TOTAL_ITEMS ->
+                    forceItemPlayerStats.setTotalItemsFound(forceItemPlayerStats.getTotalItemsFound() + toBeAdded);
+            case TRAVELLED -> forceItemPlayerStats.setTravelled(forceItemPlayerStats.getTravelled() + toBeAdded);
+            case GAMES_WON -> forceItemPlayerStats.setGamesWon(forceItemPlayerStats.getGamesWon() + toBeAdded);
+            case GAMES_PLAYED -> forceItemPlayerStats.setGamesPlayed(forceItemPlayerStats.getGamesPlayed() + toBeAdded);
             case HIGHEST_SCORE -> forceItemPlayerStats.setHighestScore(toBeAdded);
         }
         this.saveStats();
@@ -65,10 +63,10 @@ public class StatsManager {
         int rank = -1;
 
         List<ForceItemPlayerStats> statsList = new ArrayList<>(List.copyOf(this.playerStats.values()));
-        statsList.sort((o1, o2) -> o2.gamesWon() <= o1.gamesWon() ? -1 : 1);
+        statsList.sort((o1, o2) -> o2.getGamesWon() <= o1.getGamesWon() ? -1 : 1);
 
-        for(int i = 0; i < statsList.size(); i++) {
-            if(statsList.get(i).gamesWon() == this.playerStats(userName).gamesWon()) return i + 1;
+        for (int i = 0; i < statsList.size(); i++) {
+            if (statsList.get(i).getGamesWon() == this.playerStats(userName).getGamesWon()) return i + 1;
         }
 
         return rank;
@@ -77,12 +75,13 @@ public class StatsManager {
     public List<ForceItemPlayerStats> top(PlayerStat category) {
         List<ForceItemPlayerStats> statsList = new ArrayList<>(List.copyOf(this.playerStats.values()));
         statsList.sort((o1, o2) -> {
-            if(category == PlayerStat.TOTAL_ITEMS) return o2.totalItemsFound() <= o1.totalItemsFound() ? -1 : 1;
-            if(category == PlayerStat.GAMES_WON) return o2.gamesWon() <= o1.gamesWon() ? -1 : 1;
-            if(category == PlayerStat.TRAVELLED) return o2.travelled() <= o1.travelled() ? -1 : 1;
-            return o2.highestScore() <= o1.highestScore() ? -1 : 1;
+            if (category == PlayerStat.TOTAL_ITEMS) return o2.getTotalItemsFound() <= o1.getTotalItemsFound() ? -1 : 1;
+            if (category == PlayerStat.GAMES_WON) return o2.getGamesWon() <= o1.getGamesWon() ? -1 : 1;
+            if (category == PlayerStat.TRAVELLED) return o2.getTravelled() <= o1.getTravelled() ? -1 : 1;
+            return o2.getHighestScore() <= o1.getHighestScore() ? -1 : 1;
         });
-        return statsList.stream().limit(5).collect(Collectors.toList());
+
+        return statsList.stream().limit(5).toList();
     }
 
     public boolean playerExists(String userName) {
@@ -108,14 +107,15 @@ public class StatsManager {
     public void loadStats() {
         try {
             FileReader fileReader = new FileReader(this.userFile);
-            Type listType = new TypeToken<ArrayList<ForceItemPlayerStats>>(){}.getType();
+            Type listType = new TypeToken<ArrayList<ForceItemPlayerStats>>() {
+            }.getType();
             List<ForceItemPlayerStats> statsList = this.gson.fromJson(fileReader, listType);
 
-            if(statsList == null) return;
+            if (statsList == null) return;
 
-            if(!statsList.isEmpty()) {
-                for(ForceItemPlayerStats stats : statsList) {
-                    this.playerStats.put(stats.userName(), stats);
+            if (!statsList.isEmpty()) {
+                for (ForceItemPlayerStats stats : statsList) {
+                    this.playerStats.put(stats.getUserName(), stats);
                 }
             }
 
@@ -140,18 +140,18 @@ public class StatsManager {
     }
 
     public void statsMessage(Player player, ForceItemPlayerStats forceItemPlayerStats) {
-        double winPercentage = (forceItemPlayerStats.gamesPlayed() != 0) ? ((double) forceItemPlayerStats.gamesWon() / forceItemPlayerStats.gamesPlayed() * 100) : 0;
+        double winPercentage = (forceItemPlayerStats.getGamesPlayed() != 0) ? ((double) forceItemPlayerStats.getGamesWon() / forceItemPlayerStats.getGamesPlayed() * 100) : 0;
         DecimalFormat decimalFormat = new DecimalFormat("0.#");
 
         player.sendMessage(" ");
-        player.sendMessage("§8» §6§lStats §8● §a" + forceItemPlayerStats.userName() + " §8«");
+        player.sendMessage("§8» §6§lStats §8● §a" + forceItemPlayerStats.getUserName() + " §8«");
         player.sendMessage(" ");
-        player.sendMessage("  §8● §7Rank §8» §3#" + this.rank(forceItemPlayerStats.userName()));
-        player.sendMessage("  §8● §7Total items found §8» §3" + forceItemPlayerStats.totalItemsFound());
-        player.sendMessage("  §8● §7Travelled §8» §3" + (int)Math.round(forceItemPlayerStats.travelled()) + " blocks");
-        player.sendMessage("  §8● §7Highest score §8» §3" + forceItemPlayerStats.highestScore());
-        player.sendMessage("  §8● §7Games played §8» §3" + forceItemPlayerStats.gamesPlayed());
-        player.sendMessage("  §8● §7Games won §8» §3" + forceItemPlayerStats.gamesWon());
+        player.sendMessage("  §8● §7Rank §8» §3#" + this.rank(forceItemPlayerStats.getUserName()));
+        player.sendMessage("  §8● §7Total items found §8» §3" + forceItemPlayerStats.getTotalItemsFound());
+        player.sendMessage("  §8● §7Travelled §8» §3" + (int) Math.round(forceItemPlayerStats.getTravelled()) + " blocks");
+        player.sendMessage("  §8● §7Highest score §8» §3" + forceItemPlayerStats.getHighestScore());
+        player.sendMessage("  §8● §7Games played §8» §3" + forceItemPlayerStats.getGamesPlayed());
+        player.sendMessage("  §8● §7Games won §8» §3" + forceItemPlayerStats.getGamesWon());
         player.sendMessage("  §8● §7Win percentage §8» §3" + decimalFormat.format(winPercentage) + "%");
         player.sendMessage(" ");
     }
@@ -162,25 +162,28 @@ public class StatsManager {
         player.sendMessage(" ");
         AtomicInteger atomicInteger = new AtomicInteger(1);
         topList.forEach(tops -> {
-            player.sendMessage("  §8● §6" + atomicInteger.get() + ". §a" + tops.userName() + " §8» §3" + this.getStatByName(tops, playerStat) + (playerStat == PlayerStat.TRAVELLED ? " blocks" : ""));
+            player.sendMessage("  §8● §6" + atomicInteger.get() + ". §a" + tops.getUserName() + " §8» §3" + this.getStatByName(tops, playerStat) + (playerStat == PlayerStat.TRAVELLED ? " blocks" : ""));
             atomicInteger.getAndIncrement();
         });
         player.sendMessage(" ");
     }
 
     public int getStatByName(ForceItemPlayerStats forceItemPlayerStats, PlayerStat playerStat) {
-        switch(playerStat) {
+        switch (playerStat) {
+            case GAMES_PLAYED -> {
+                return forceItemPlayerStats.getGamesPlayed();
+            }
             case GAMES_WON -> {
-                return forceItemPlayerStats.gamesWon();
+                return forceItemPlayerStats.getGamesWon();
             }
             case HIGHEST_SCORE -> {
-                return forceItemPlayerStats.highestScore();
+                return forceItemPlayerStats.getHighestScore();
             }
             case TOTAL_ITEMS -> {
-                return forceItemPlayerStats.totalItemsFound();
+                return forceItemPlayerStats.getTotalItemsFound();
             }
             case TRAVELLED -> {
-                return (int)Math.round(forceItemPlayerStats.travelled());
+                return (int) Math.round(forceItemPlayerStats.getTravelled());
             }
         }
         return -1;
@@ -189,22 +192,22 @@ public class StatsManager {
     public int calculateDistance(Player player) {
         int distance = 0;
 
-        for(Statistic statistics : Statistic.values()) {
+        for (Statistic statistics : Statistic.values()) {
             //check and get every statistic that has CM (distance based)
-            if(statistics.name().contains("CM")) {
+            if (statistics.name().contains("CM")) {
                 distance += player.getStatistic(statistics);
             }
         }
 
-        return (int)Math.round((double) distance / 100);
+        return (int) Math.round((double) distance / 100);
     }
 
     public void createPlayerStats(ForceItemPlayer forceItemPlayer) {
-        if(this.playerExists(forceItemPlayer.player().getName())) return;
+        if (this.playerExists(forceItemPlayer.getPlayer().getName())) return;
 
-        ForceItemPlayerStats forceItemPlayerStats = new ForceItemPlayerStats(forceItemPlayer.player().getName(), 0, 0.0, 0, 0, 0);
+        ForceItemPlayerStats forceItemPlayerStats = new ForceItemPlayerStats(forceItemPlayer.getPlayer().getName(), 0, 0.0, 0, 0, 0);
 
-        this.playerStats.put(forceItemPlayer.player().getName(), forceItemPlayerStats);
+        this.playerStats.put(forceItemPlayer.getPlayer().getName(), forceItemPlayerStats);
         this.saveStats();
     }
 
